fix: name wrap line height

--- a/src/assets/style/index.less
+++ b/src/assets/style/index.less
@@ -100,6 +100,7 @@ div.g-singlec {
       .name.f-thide.s-fc1.j-flag {
         transition: all 0.5s;
         font-size: 24px;
+        line-height: 1.5;
       }
 
       .lyric.s-fc4.j-flag {
